# rolr

./: Cargo.toml  README.md  rolr-aarch64
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: lint.yml  publish.yml
config/: .gitignore  active.txt  ansible.cfg
config/roles/x86_64/debian/: 00-base.yml  10-something-else.yml  20-chert.yml  30-esker.yml  40-riebeck.yml  50-gabbro.yml  60-feldspar.yml  70-solanum.yml  99-something-else.yml
src/: cli.rs  config.rs  main.rs  parsing.rs  playbook.rs  roles.rs
src/commands/: add.rs  list.rs  mod.rs  run.rs  select.rs  update.rs
