[package]
name = "rolr"
version = "0.1.0"
edition = "2021"
description = "host role manager built on top of ansible"
license = "GPL-3.0"
authors = ["thorou"]

[profile.release]
strip = true
lto = true

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.19", features = ["derive"] }
console = "0.15.7"
dialoguer = "0.10.4"
itertools = "0.11.0"
lazy_static = "1.4.0"
log = "0.4.19"
regex = "1.9.1"
stderrlog = "0.5.4"
sys-info = "0.9.1"
